@@ -41,11 +41,8 @@
           <executable>java</executable>
           <workingDirectory>.</workingDirectory>
           <arguments>
-            <argument>--module-path=mods-mvn</argument>
-            <argument>--class-path=libs/*</argument>
-
+            <argument>--module-path=mods-mvn:libs</argument>
             <argument>--module=Core/dk.sdu.cbse.App</argument>
-            <argument>--add-modules javafx.graphics</argument>
           </arguments>
         </configuration>
       </plugin>
